gap correction

--- a/src/app/direct-message/direct-message.component.scss
+++ b/src/app/direct-message/direct-message.component.scss
@@ -22,4 +22,7 @@
     font-size: 20px;
     font-weight: bold;
     padding: 32px 45px 20px 45px;
+    span{
+        margin-left: -6px;
+    }
 }
